--- a/Result-new.html
+++ b/Result-new.html
@@ -11,8 +11,8 @@
       font-family: 'Montserrat', sans-serif;
       color: white;
       text-align: center;
-      padding: 50px 20px;
-      background-color: #000;
+      padding: 40px 20px;
+      background-color: #1a1a1a;
     }
 
     .title {
@@ -20,13 +20,12 @@
       font-weight: bold;
       font-style: italic;
       line-height: 1.2;
-      margin-bottom: 25px;
+      margin: 25px 0;
     }
 
     .subtitle {
-      font-size: 1.2rem;
-      font-weight: 400;
-      margin-bottom: 30px;
+      font-size: 1.4rem;
+      margin-bottom: 20px;
     }
 
     .section {
@@ -36,19 +35,34 @@
       line-height: 1.6;
     }
 
-    .red {
-      background-color: #950606;
-      text-shadow: 0 0 5px #ff4d4d, 0 0 10px #ff4d4d;
+    .archetype-name {
+      font-weight: bold;
+      font-size: 2.2rem;
+      color: #e1bf78;
+      margin-top: 10px;
     }
 
-    .green {
-      background-color: #06954E;
-      text-shadow: 0 0 5px #88e788, 0 0 10px #88e788;
+    .slogan {
+      font-style: italic;
+      font-size: 1.2rem;
+      color: #e1bf78;
+      margin-bottom: 20px;
     }
 
-    .blue {
-      background-color: #064D95;
-      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+    img.result-img {
+      user-select: none;
+      display: block;
+      margin: 20px auto;
+      max-width: 300px;
+      border: 4px solid #e1bf78;
+      border-radius: 16px;
+      box-shadow: 0 0 8px rgba(255, 215, 0, 0.5);
+    }
+
+    a {
+      color: #e1bf78;
+      text-decoration: underline;
+      font-weight: bold;
     }
 
     button {
@@ -68,169 +82,208 @@
       background-color: rgba(225, 191, 120, 0.1);
     }
 
-    #typeDetails {
-      margin-top: 20px;
-      font-style: italic;
-      font-size: 1rem;
-      display: none;
-    }
-
-    .archetype-name {
-      font-weight: bold;
-      font-size: 2rem;
-      margin-bottom: 12px;
-      color: #e1bf78;
-    }
-
-    img.no-save {
-      user-select: none;
+    .logo-img {
+      max-width: 120px;
+      margin: 0 auto 20px auto;
       display: block;
-      margin: 0 auto 30px auto;
-      max-width: 320px;
-      width: 100%;
-      height: auto;
-      border: 4px solid #e1bf78;
-      border-radius: 16px;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.5);
     }
 
-    .profile-caption a {
-      color: #e1bf78;
-      font-weight: bold;
-      text-decoration: underline;
+    .compatibility {
+      margin-top: 30px;
     }
 
-    .compat-links a {
-      color: #e1bf78;
-      font-weight: bold;
-      text-decoration: underline;
-    }
-
-    .btn-container {
+    .btn-row {
       display: flex;
       justify-content: space-between;
-      padding: 30px;
+      max-width: 700px;
+      margin: 40px auto;
     }
 
-    .btn-left { text-align: left; }
-    .btn-right { text-align: right; }
+    footer {
+      text-align: center;
+      margin-top: 60px;
+    }
+
+    footer p {
+      font-size: 0.8rem;
+      color: white;
+      opacity: 0.7;
+    }
 
     @media (min-width: 1024px) {
-      .archetype-name {
-        font-size: 3.2rem;
-      }
-
-      body {
-        padding: 80px 40px;
-        font-size: 22px;
-      }
-
-      .section {
-        font-size: 1.8rem;
-        max-width: 1000px;
-      }
-
-      .profile-caption {
-        font-size: 1.4rem;
-        margin-top: 16px;
-      }
-
-      button {
-        font-size: 1.4rem;
-        padding: 16px 30px;
-      }
+      .archetype-name { font-size: 3.2rem; }
+      .slogan { font-size: 1.6rem; }
+      .subtitle { font-size: 2rem; }
     }
   </style>
 </head>
-<body id="resultBody">
-  <div class="title" id="roomTitle">Meet your type</div>
-  <div class="subtitle" id="archetypeText">Your Archetype</div>
-  <div class="section" id="compatibilityText" class="compat-links"></div>
+<body>
+  <!-- Gold Le Libido Logo -->
+  <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img">
 
-  <div class="profile-caption">
-    <a id="profileLink" href="#">Click here to reveal your full sexual profile</a>
-  </div>
+  <!-- Dynamic Results Section -->
+  <div class="title" id="roomTitle">Meet Your Type</div>
+  <div class="subtitle">Based on your answers, your erotic archetype is:</div>
+  <div id="archetypeOutput"></div>
 
-  <div style="margin: 20px;">
+  <!-- Share Button -->
+  <div style="margin-top: 30px;">
     <button onclick="copyShareURL()">Share Your Result</button>
   </div>
 
-  <div class="btn-container">
-    <div class="btn-left">
-      <a href="/anonymous-signin.html"><button>Sign In Anonymously</button></a>
-    </div>
-    <div class="btn-right">
-      <a href="/verified-signin.html"><button>Verified Sign-In</button></a>
-    </div>
+  <!-- Login Buttons -->
+  <div class="btn-row">
+    <a href="/anonymous-signin.html"><button>Sign In Anonymously</button></a>
+    <a href="/verified-signin.html"><button>Verified Sign-In</button></a>
   </div>
 
-  <footer style="text-align: center; margin-top: 40px;">
-    <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
-      © 2025 Le Libido. All rights reserved. |
-      <a href="/legal.html" style="color: gold; text-decoration: underline;">Legal Notice</a>
-    </p>
-  </footer>
-
-<script>
-  function escapeHTML(str) {
-    return String(str || "").replace(/[&<>"']/g, (c) => ({
-      '&': '&amp;',
-      '<': '&lt;',
-      '>': '&gt;',
-      '"': '&quot;',
-      "'": '&#39;',
-    }[c]));
-  }
-
-  function copyShareURL() {
-    navigator.clipboard.writeText(window.location.href).then(() => {
-      alert("Link copied to clipboard! Share away.");
-    });
-  }
-
+  <!-- Compatibility Section -->
+  <div class="section compatibility" id="compatibilitySection"></div>
+  <script>
   const params = new URLSearchParams(window.location.search);
-  const archetype = params.get("type") || "Unknown";
-  const gender = params.get("q8") === "eggplant" ? "male" : "female";
-  const lowerSafe = archetype.toLowerCase().replace(/[\s&]+/g, "_");
-  const imgPath = `images/${lowerSafe}_${gender}.jpg`;
-  const profilePath = `/premium/erotic-blueprint_${lowerSafe}.html`;
+  const answers = {};
+  for (let i = 1; i <= 10; i++) {
+    answers[`q${i}`] = params.get(`q${i}`) || "";
+  }
 
-  document.querySelector(".archetype-name").textContent = archetype;
-  document.getElementById("archetypeText").innerHTML = `
-    <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
-      Your Sexual Profile:
-    </div>
-    <div class="archetype-name">${archetype}</div>
-    <img src="${imgPath}" class="no-save">
-  `;
-  document.getElementById("profileLink").href = profilePath;
-
-  const matches = {
-    "Devoted Darling": ["Tender Protector", "Heatwave", "Promiscuous Plaything"],
-    "Mood Multiplier": ["Heatwave", "Tender Protector", "Bedroom Adventurer"],
-    "Heatwave": ["Mood Multiplier", "Devoted Darling", "Generous Giver"],
-    "Tender Protector": ["Devoted Darling", "Mood Multiplier", "Promiscuous Plaything"],
-    "Promiscuous Plaything": ["Charmer in Charge", "Bedroom Adventurer", "Dungeon Master"],
-    "Generous Giver": ["Bedroom Adventurer", "Charmer in Charge", "Provoker"],
-    "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "Punish Me"],
-    "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Claimed & Trained"],
-    "Claimed & Trained": ["Dungeon Master", "Provoker", "Charmer in Charge"],
-    "Punish Me": ["Provoker", "Claimed & Trained", "Bedroom Adventurer"],
-    "Provoker": ["Punish Me", "Claimed & Trained", "Generous Giver"],
-    "Dungeon Master": ["Claimed & Trained", "Punish Me", "Promiscuous Plaything"]
+  const archetypes = {
+    "Tender Protector": 0,
+    "Devoted Darling": 0,
+    "Heatwave": 0,
+    "Mood Multiplier": 0,
+    "Generous Giver": 0,
+    "Promiscuous Plaything": 0,
+    "Bedroom Adventurer": 0,
+    "Charmer in Charge": 0,
+    "Claimed & Trained": 0,
+    "Punish Me": 0,
+    "The Provoker": 0,
+    "Dungeon Master": 0
   };
 
-  if (matches[archetype]) {
-    const [m1, m2, m3] = matches[archetype];
-    document.getElementById("compatibilityText").innerHTML = `
-      <div class="compat-links">
-        <strong>Top 3 Compatibility Matches:</strong><br>
-        🥇 <a href="/premium/erotic-blueprint_${m1.toLowerCase().replace(/[\s&]+/g, "_")}.html">${m1}</a><br>
-        🥈 <a href="/premium/erotic-blueprint_${m2.toLowerCase().replace(/[\s&]+/g, "_")}.html">${m2}</a><br>
-        🥉 <a href="/premium/erotic-blueprint_${m3.toLowerCase().replace(/[\s&]+/g, "_")}.html">${m3}</a>
-      </div>
-    `;
+  const scores = {
+    q1: {
+      a: {"Devoted Darling": 3, "Generous Giver": 2, "Tender Protector": 2, "Mood Multiplier": 1},
+      b: {"Dungeon Master": 3, "Charmer in Charge": 2, "Bedroom Adventurer": 1},
+      c: {"Punish Me": 3, "The Provoker": 2, "Claimed & Trained": 1},
+      d: {"Promiscuous Plaything": 3, "Mood Multiplier": 2, "Heatwave": 1}
+    },
+    q2: {
+      a: {"Devoted Darling": 3},
+      b: {"Claimed & Trained": 3},
+      c: {"Dungeon Master": 3, "Charmer in Charge": 2, "The Provoker": 1},
+      d: {"Heatwave": 3, "The Provoker": 2, "Generous Giver": 1, "Mood Multiplier": 1}
+    },
+    q3: {
+      a: {"Tender Protector": 5, "Devoted Darling": 5, "Mood Multiplier": 5, "Generous Giver": 5, "Heatwave": 5},
+      b: {"Bedroom Adventurer": 5, "Charmer in Charge": 5, "Promiscuous Plaything": 5, "Mood Multiplier": 5, "Generous Giver": 5},
+      c: {"Dungeon Master": 5, "Claimed & Trained": 5, "Punish Me": 5, "The Provoker": 5}
+    },
+    q4: {
+      a: {"Devoted Darling": 3, "Mood Multiplier": 2, "Generous Giver": 1, "Tender Protector": 1},
+      b: {"Punish Me": 3, "Bedroom Adventurer": 2, "Charmer in Charge": 1, "Heatwave": 1},
+      c: {"Dungeon Master": 3, "The Provoker": 2, "Charmer in Charge": 1},
+      d: {"Dungeon Master": 3, "Charmer in Charge": 2, "Tender Protector": 1},
+      e: {"Mood Multiplier": 2, "Claimed & Trained": 2, "The Provoker": 2, "Heatwave": 2, "Generous Giver": 1, "Promiscuous Plaything": 1}
+    },
+    q5: {
+      a: {"Promiscuous Plaything": 3, "Punish Me": 1},
+      b: {"Bedroom Adventurer": 3, "Generous Giver": 2},
+      c: {"Devoted Darling": 3, "Tender Protector": 3, "Mood Multiplier": 3, "Heatwave": 3},
+      d: {"Dungeon Master": 3, "Charmer in Charge": 2, "The Provoker": 1, "Bedroom Adventurer": 1}
+    },
+    q6: {
+      a: {"Mood Multiplier": 3, "Bedroom Adventurer": 2, "Promiscuous Plaything": 1},
+      b: {"The Provoker": 3, "Punish Me": 2, "Dungeon Master": 2, "Charmer in Charge": 1},
+      c: {"Devoted Darling": 3, "Tender Protector": 2, "Generous Giver": 1, "Mood Multiplier": 1},
+      d: {"Charmer in Charge": 3, "Promiscuous Plaything": 2, "Bedroom Adventurer": 2, "Claimed & Trained": 1, "Dungeon Master": 1}
+    },
+    q7: {
+      a: {"Devoted Darling": 3, "Tender Protector": 2, "Dungeon Master": 1},
+      b: {"Mood Multiplier": 3, "Generous Giver": 2, "Heatwave": 1},
+      c: {"Bedroom Adventurer": 3, "Promiscuous Plaything": 2, "Charmer in Charge": 1},
+      d: {"The Provoker": 3, "Punish Me": 2, "Bedroom Adventurer": 1}
+    },
+    q9: {
+      control: {"Dungeon Master": 5, "Charmer in Charge": 5, "Tender Protector": 5},
+      "partner control": {"Claimed & Trained": 5, "Devoted Darling": 5, "Promiscuous Plaything": 5},
+      "depends mood": {"The Provoker": 5, "Bedroom Adventurer": 5, "Generous Giver": 5},
+      "depends partner": {"Mood Multiplier": 5, "Generous Giver": 5, "Punish Me": 5}
+    },
+    q10: {
+      praise: {"Devoted Darling": 3, "Mood Multiplier": 3, "Tender Protector": 3, "Generous Giver": 3, "Heatwave": 3},
+      teasing: {"Charmer in Charge": 3, "Promiscuous Plaything": 2, "Tender Protector": 2, "Heatwave": 2, "Generous Giver": 1},
+      degradation: {"Claimed & Trained": 3, "Promiscuous Plaything": 3, "Punish Me": 2},
+      filthy: {"Dungeon Master": 3, "Claimed & Trained": 3, "Punish Me": 3, "The Provoker": 3},
+      fifth: {"Devoted Darling": 4, "Mood Multiplier": 4, "Tender Protector": 4, "Generous Giver": 4, "Heatwave": 4}
+    }
+  };
+
+  // Tally scores
+  Object.entries(answers).forEach(([q, val]) => {
+    const mapping = scores[q];
+    if (mapping && mapping[val]) {
+      Object.entries(mapping[val]).forEach(([type, points]) => {
+        archetypes[type] += points;
+      });
+    }
+  });
+
+  // Pick the top result
+  const sorted = Object.entries(archetypes).sort((a, b) => b[1] - a[1]);
+  const [topType] = sorted[0];
+
+  const archetypeImages = {
+    "Tender Protector": "tender_protector",
+    "Devoted Darling": "devoted_darling",
+    "Heatwave": "heatwave",
+    "Mood Multiplier": "mood_multiplier",
+    "Generous Giver": "generous_giver",
+    "Promiscuous Plaything": "promiscuous_plaything",
+    "Bedroom Adventurer": "bedroom_adventurer",
+    "Charmer in Charge": "charmer_in_charge",
+    "Claimed & Trained": "claimed_and_trained",
+    "Punish Me": "punish_me",
+    "The Provoker": "provoker",
+    "Dungeon Master": "dungeon_master"
+  };
+
+  const imageName = archetypeImages[topType];
+  const gender = answers.q8 === "eggplant" ? "male" : "female";
+  const imageUrl = `images/${imageName}_${gender}.jpg`;
+  const profileLink = `/premium/erotic-blueprint_${imageName}.html`;
+
+  const slogans = {
+    "Tender Protector": "You lead with gravity, not volume.",
+    "Devoted Darling": "Nothing is as kinky as loyalty.",
+    "Heatwave": "People adjust to you. Not the other way around.",
+    "Mood Multiplier": "You match their vibe—and raise it.",
+    "Generous Giver": "You just need someone to give it to.",
+    "Promiscuous Plaything": "Get ready for a wild ride.",
+    "Bedroom Adventurer": "Down for anything, dirty or not.",
+    "Charmer in Charge": "You make them beg for it.",
+    "Claimed & Trained": "Obedience is ecstasy.",
+    "Punish Me": "Defiance is your foreplay.",
+    "The Provoker": "You press buttons—on purpose.",
+    "Dungeon Master": "You're not in a fantasy. You run it."
+  };
+
+  document.getElementById("archetypeOutput").innerHTML = `
+    <div class="archetype-name">${topType}</div>
+    <div class="slogan">${slogans[topType]}</div>
+    <a href="${profileLink}">
+      <img src="${imageUrl}" alt="${topType}" class="result-img" oncontextmenu="return false">
+    </a>
+    <div class="section">
+      <a href="${profileLink}">Click here to reveal your full sexual profile</a>
+    </div>
+  `;
+
+  function copyShareURL() {
+    const base = window.location.origin + window.location.pathname;
+    const link = `${base}?${params.toString()}`;
+    navigator.clipboard.writeText(link).then(() => {
+      alert("Link copied! Share it with someone sexy.");
+    });
   }
 </script>
-</body>
-</html>
