--- a/Result-new.html
+++ b/Result-new.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Results</title>
+  <title>Your Sexual Profile</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -12,6 +12,7 @@
       color: white;
       text-align: center;
       padding: 50px 20px;
+      background-color: #000; /* This will dynamically change based on archetype */
     }
 
     .title {
@@ -24,9 +25,9 @@
     }
 
     .subtitle {
-      font-size: 1.4rem;
-      font-style: italic;
-      margin-bottom: 25px;
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-bottom: 30px;
     }
 
     .section {
@@ -36,36 +37,48 @@
       line-height: 1.6;
     }
 
-    .blue {
-      background-color: #064D95;
+    .red {
+      background-color: #950606;
     }
 
     .green {
       background-color: #06954E;
     }
 
-    .red {
-      background-color: #950606;
+    .blue {
+      background-color: #064D95;
+    }
+
+    .button {
+      margin-top: 20px;
+      padding: 14px 28px;
+      font-weight: bold;
+      font-size: 1.2rem;
+      border: 2px solid #e1bf78;
+      background-color: transparent;
+      color: #e1bf78;
+      font-style: italic;
+      border-radius: 10px;
+      cursor: pointer;
+      text-shadow: none;
+    }
+
+    .button:hover {
+      background-color: rgba(255, 255, 255, 0.1);
     }
 
     .archetype-name {
-      font-size: 2.4rem;
       font-weight: bold;
-      margin-top: 20px;
+      font-size: 2.4rem;
       color: #e1bf78;
+      margin-bottom: 12px;
     }
 
-    .slogan {
-      font-style: italic;
-      font-size: 1.3rem;
-      margin-bottom: 30px;
-    }
-
-    .result-img {
+    img.no-save {
       user-select: none;
       display: block;
       margin: 0 auto 30px auto;
-      max-width: 320px;
+      max-width: 300px;
       width: 100%;
       height: auto;
       border: 4px solid #e1bf78;
@@ -73,44 +86,22 @@
       box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
     }
 
-    button {
-      margin-top: 20px;
-      padding: 14px 28px;
-      font-weight: bold;
-      font-size: 1.2rem;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-
-    .cta {
-      background-color: #e1bf78;
-      color: black;
-      font-weight: bold;
-      font-size: 1.6rem;
-      padding: 18px 30px;
-      border: none;
-      border-radius: 12px;
-      box-shadow: 0 0 14px rgba(225,191,120,0.5);
-      margin-top: 50px;
-    }
-
-    .compatibility a {
-      display: block;
-      margin-top: 6px;
+    .profile-caption {
+      font-style: italic;
+      font-size: 1rem;
+      margin-top: 10px;
       color: #e1bf78;
-      text-decoration: underline;
-      font-weight: bold;
     }
 
-    a.profile-link {
+    a.no-underline {
       color: #e1bf78;
-      text-decoration: underline;
-      font-weight: bold;
+      text-decoration: none;
     }
 
     footer {
-      margin-top: 50px;
+      margin-top: 40px;
       font-size: 0.8rem;
+      color: white;
       opacity: 0.7;
     }
 
@@ -118,138 +109,156 @@
       color: #e1bf78;
       text-decoration: underline;
     }
-
-    @media (min-width: 1024px) {
-      .title { font-size: 6rem; }
-      .subtitle { font-size: 2rem; }
-      .archetype-name { font-size: 3.6rem; }
-      .slogan { font-size: 2rem; }
-    }
   </style>
 </head>
 <body id="resultBody">
-  <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" style="max-width: 120px; display: block; margin: 20px auto 10px;">
-  
+    <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden-le-libido-logo.png" alt="Le Libido Logo" style="max-width: 120px; margin-bottom: 30px; display: block; margin-left: auto; margin-right: auto;">
+
   <div class="title">Your Sexual Profile Is:</div>
-  <div id="archetypeOutput"></div>
+  <div id="archetypeContent"></div>
+  <div id="compatibilityText" class="section"></div>
 
-  <div class="section compatibility" id="compatibilitySection"></div>
-
-  <div class="section">
-    <button onclick="copyShareURL()">Share Your Result</button>
+  <div style="margin-top: 40px;">
+    <button class="button" onclick="window.location.href='https://lelibido.com/premium/'">Date Now</button>
   </div>
 
-  <div>
-    <a href="/map.html">
-      <button class="cta">DATE NOW</button>
-    </a>
+  <div style="margin-top: 20px;">
+    <button class="button" onclick="navigator.share ? navigator.share({ title: 'Discover your Erotic Archetype!', url: window.location.href }) : alert('Copy this URL to share: ' + window.location.href);">Share Your Result</button>
   </div>
 
-  <footer>
-    <p>
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const q = {};
+    for (let i = 1; i <= 10; i++) q[i] = params.get("q" + i);
+
+    const archetypes = {
+      "Devoted Darling": 0, "Mood Multiplier": 0, "Tender Protector": 0, "Heatwave": 0,
+      "Generous Giver": 0, "Promiscuous Plaything": 0, "Bedroom Adventurer": 0,
+      "Charmer in Charge": 0, "Dungeon Master": 0, "Claimed & Trained": 0,
+      "The Provoker": 0, "The Punish Me": 0
+    };
+
+    // SCORING LOGIC (Q1–Q10)
+    const scoring = {
+      1: {
+        a: [["Devoted Darling", 3], ["Generous Giver", 2], ["Tender Protector", 2], ["Mood Multiplier", 1]],
+        b: [["Dungeon Master", 3], ["Charmer in Charge", 2], ["Bedroom Adventurer", 1]],
+        c: [["The Punish Me", 3], ["The Provoker", 2], ["Claimed & Trained", 1]],
+        d: [["Promiscuous Plaything", 3], ["Mood Multiplier", 2], ["Heatwave", 1]]
+      },
+      2: {
+        a: [["Devoted Darling", 3], ["Promiscuous Plaything", 2], ["Tender Protector", 1]],
+        b: [["The Punish Me", 3], ["The Provoker", 2], ["Dungeon Master", 1]],
+        c: [["Bedroom Adventurer", 3], ["The Provoker", 2], ["Tender Protector", 1]],
+        d: [["Heatwave", 3], ["The Provoker", 2], ["Generous Giver", 1]],
+        e: [["Promiscuous Plaything", 3], ["Generous Giver", 2], ["Mood Multiplier", 1]],
+        f: [["Charmer in Charge", 3], ["Bedroom Adventurer", 2], ["Dungeon Master", 1]],
+        g: [["Promiscuous Plaything", 3], ["Generous Giver", 2], ["The Punish Me", 1]]
+      },
+      3: {
+        a: [["Devoted Darling", 5], ["Mood Multiplier", 5], ["Tender Protector", 5], ["Generous Giver", 5], ["Heatwave", 5]],
+        b: [["Promiscuous Plaything", 5], ["Bedroom Adventurer", 5], ["Charmer in Charge", 5], ["Mood Multiplier", 5], ["Generous Giver", 5]],
+        c: [["Dungeon Master", 5], ["Claimed & Trained", 5], ["The Punish Me", 5], ["The Provoker", 5]]
+      },
+      4: {
+        a: [["Devoted Darling", 3], ["Mood Multiplier", 2], ["Generous Giver", 1], ["Tender Protector", 1]],
+        b: [["The Punish Me", 3], ["Bedroom Adventurer", 2], ["Charmer in Charge", 1], ["Heatwave", 1]],
+        c: [["Dungeon Master", 3], ["The Provoker", 2], ["Charmer in Charge", 1]],
+        d: [["Dungeon Master", 3], ["Charmer in Charge", 2], ["Tender Protector", 1]],
+        e: [["Mood Multiplier", 2], ["Claimed & Trained", 2], ["The Provoker", 2], ["Heatwave", 2], ["Generous Giver", 1], ["Promiscuous Plaything", 1]]
+      },
+      5: {
+        a: [["Promiscuous Plaything", 3], ["The Punish Me", 1]],
+        b: [["Bedroom Adventurer", 3], ["Generous Giver", 2]],
+        c: [["Devoted Darling", 3], ["Tender Protector", 3], ["Mood Multiplier", 3], ["Heatwave", 3]],
+        d: [["Dungeon Master", 3], ["Charmer in Charge", 2], ["The Provoker", 1], ["Bedroom Adventurer", 1]]
+      },
+      6: {
+        a: [["Mood Multiplier", 3], ["Bedroom Adventurer", 2], ["Promiscuous Plaything", 1]],
+        b: [["The Provoker", 3], ["The Punish Me", 2], ["Dungeon Master", 2], ["Charmer in Charge", 1]],
+        c: [["Devoted Darling", 3], ["Tender Protector", 2], ["Generous Giver", 1], ["Mood Multiplier", 1]],
+        d: [["Charmer in Charge", 3], ["Promiscuous Plaything", 2], ["Bedroom Adventurer", 2], ["Claimed & Trained", 1], ["Dungeon Master", 1]]
+      },
+      7: {
+        a: [["Devoted Darling", 3], ["Tender Protector", 2], ["Dungeon Master", 1]],
+        b: [["Mood Multiplier", 3], ["Generous Giver", 2], ["Heatwave", 1]],
+        c: [["Bedroom Adventurer", 3], ["Promiscuous Plaything", 2], ["Charmer in Charge", 1]],
+        d: [["The Provoker", 3], ["The Punish Me", 2], ["Bedroom Adventurer", 1]]
+      },
+      9: {
+        a: [["Dungeon Master", 5], ["Charmer in Charge", 5], ["Tender Protector", 5]],
+        b: [["Claimed & Trained", 5], ["Devoted Darling", 5], ["Promiscuous Plaything", 5]],
+        c: [["The Provoker", 5], ["Bedroom Adventurer", 5], ["Generous Giver", 5]],
+        d: [["Mood Multiplier", 5], ["Generous Giver", 5], ["The Punish Me", 5]]
+      },
+      10: {
+        a: [["Devoted Darling", 3], ["Mood Multiplier", 3], ["Tender Protector", 3], ["Generous Giver", 3], ["Heatwave", 3]],
+        b: [["Charmer in Charge", 3], ["Promiscuous Plaything", 2], ["Tender Protector", 2], ["Heatwave", 2], ["Generous Giver", 1]],
+        c: [["Claimed & Trained", 3], ["Promiscuous Plaything", 3], ["The Punish Me", 2]],
+        d: [["Dungeon Master", 3], ["Claimed & Trained", 3], ["The Punish Me", 3], ["The Provoker", 3]],
+        e: [["Devoted Darling", 4], ["Mood Multiplier", 4], ["Tender Protector", 4], ["Generous Giver", 4], ["Heatwave", 4]]
+      }
+    };
+        // CALCULATE SCORES
+    for (let i = 1; i <= 10; i++) {
+      const answer = q[i]?.toLowerCase();
+      const weights = scoring[i]?.[answer];
+      if (weights) {
+        weights.forEach(([type, value]) => {
+          if (archetypes[type] !== undefined) archetypes[type] += value;
+        });
+      }
+    }
+
+    // DETERMINE RESULT
+    const sorted = Object.entries(archetypes).sort((a, b) => b[1] - a[1]);
+    const [topArchetype, topScore] = sorted[0];
+    const second = sorted[1][0];
+    const third = sorted[2][0];
+
+    // ROOM COLOR
+    const roomMap = {
+      "Devoted Darling": "blue", "Mood Multiplier": "blue", "Tender Protector": "blue", "Heatwave": "blue",
+      "Generous Giver": "green", "Promiscuous Plaything": "green", "Bedroom Adventurer": "green", "Charmer in Charge": "green",
+      "Dungeon Master": "red", "Claimed & Trained": "red", "The Provoker": "red", "The Punish Me": "red"
+    };
+    const roomColor = roomMap[topArchetype];
+    document.body.classList.add(roomColor);
+
+    const gender = q[8] === "eggplant" ? "male" : "female";
+    const imageSafe = topArchetype.toLowerCase().replace(/ & /g, "_").replace(/\s+/g, "_");
+    const imgSrc = `/images/${imageSafe}_${gender}.jpg`;
+    const profileLink = `/premium/erotic-blueprint_${imageSafe}.html`;
+    const secondLink = `/premium/erotic-blueprint_${second.toLowerCase().replace(/ & /g, "_").replace(/\s+/g, "_")}.html`;
+    const thirdLink = `/premium/erotic-blueprint_${third.toLowerCase().replace(/ & /g, "_").replace(/\s+/g, "_")}.html`;
+
+    const archetypeContent = document.getElementById("archetypeContent");
+    archetypeContent.innerHTML = `
+      <div class="archetype-name" style="color: #e1bf78;">${topArchetype}</div>
+      <a href="${profileLink}">
+        <img src="${imgSrc}" class="no-save" alt="${topArchetype}" style="max-width: 340px; margin-bottom: 20px; border: 4px solid #e1bf78;">
+      </a>
+      <div class="profile-caption">
+        <a href="${profileLink}" style="color: #e1bf78; font-weight: bold; text-decoration: underline;">
+          Click here to reveal your full sexual profile
+        </a>
+      </div>
+    `;
+
+    const compatibilityText = document.getElementById("compatibilityText");
+    compatibilityText.innerHTML = `
+      <strong>Top Compatibility Matches:</strong><br>
+      🥇 <a href="${secondLink}" style="color: #e1bf78;">${second}</a><br>
+      🥈 <a href="${thirdLink}" style="color: #e1bf78;">${third}</a><br>
+      🥉 <a href="/archetype-gallery.html" style="color: #e1bf78;">Explore the rest</a>
+    `;
+  </script>
+
+  <footer style="text-align: center; margin-top: 50px;">
+    <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
       © 2025 Le Libido. All rights reserved. |
-      <a href="/legal.html">Legal Notice</a>
+      <a href="/legal.html" style="color: #e1bf78; text-decoration: underline;">Legal Notice</a>
     </p>
   </footer>
-  <script>
-  const params = new URLSearchParams(window.location.search);
-  const answers = {};
-  for (let i = 1; i <= 10; i++) {
-    answers[`q${i}`] = params.get(`q${i}`) || "";
-  }
-
-  const archetypes = {
-    "Tender Protector": 0, "Devoted Darling": 0, "Heatwave": 0, "Mood Multiplier": 0,
-    "Generous Giver": 0, "Promiscuous Plaything": 0, "Bedroom Adventurer": 0,
-    "Charmer in Charge": 0, "Claimed & Trained": 0, "Punish Me": 0,
-    "The Provoker": 0, "Dungeon Master": 0
-  };
-
-  const scores = { /* entire scoring matrix goes here exactly as finalized */ };
-
-  // Apply weights
-  Object.entries(answers).forEach(([q, val]) => {
-    const mapping = scores[q];
-    if (mapping && mapping[val]) {
-      Object.entries(mapping[val]).forEach(([type, pts]) => {
-        archetypes[type] += pts;
-      });
-    }
-  });
-
-  const sorted = Object.entries(archetypes).sort((a, b) => b[1] - a[1]);
-  const [topType] = sorted[0];
-
-  const archetypeImages = {
-    "Tender Protector": "tender_protector", "Devoted Darling": "devoted_darling", "Heatwave": "heatwave",
-    "Mood Multiplier": "mood_multiplier", "Generous Giver": "generous_giver", "Promiscuous Plaything": "promiscuous_plaything",
-    "Bedroom Adventurer": "bedroom_adventurer", "Charmer in Charge": "charmer_in_charge", "Claimed & Trained": "claimed_and_trained",
-    "Punish Me": "punish_me", "The Provoker": "provoker", "Dungeon Master": "dungeon_master"
-  };
-
-  const slogans = {
-    "Tender Protector": "You lead with gravity, not volume.",
-    "Devoted Darling": "Nothing is as kinky as loyalty.",
-    "Heatwave": "People adjust to you. Not the other way around.",
-    "Mood Multiplier": "You match their vibe—and raise it.",
-    "Generous Giver": "You just need someone to give it to.",
-    "Promiscuous Plaything": "Get ready for a wild ride.",
-    "Bedroom Adventurer": "Down for anything, dirty or not.",
-    "Charmer in Charge": "You make them beg for it.",
-    "Claimed & Trained": "Obedience is ecstasy.",
-    "Punish Me": "Defiance is your foreplay.",
-    "The Provoker": "You press buttons—on purpose.",
-    "Dungeon Master": "You're not in a fantasy. You run it."
-  };
-
-  const gender = answers.q8 === "eggplant" ? "male" : "female";
-  const slug = archetypeImages[topType];
-  const img = `images/${slug}_${gender}.jpg`;
-  const link = `/premium/erotic-blueprint_${slug}.html`;
-
-  // Set background
-  const resultBody = document.getElementById("resultBody");
-  const roomColors = {
-    "Tender Protector": "blue", "Devoted Darling": "blue", "Heatwave": "blue", "Mood Multiplier": "blue",
-    "Generous Giver": "green", "Promiscuous Plaything": "green", "Bedroom Adventurer": "green", "Charmer in Charge": "green",
-    "Claimed & Trained": "red", "Punish Me": "red", "The Provoker": "red", "Dungeon Master": "red"
-  };
-  resultBody.classList.add(roomColors[topType]);
-
-  document.getElementById("archetypeOutput").innerHTML = `
-    <div class="archetype-name">${topType}</div>
-    <div class="slogan">${slogans[topType]}</div>
-    <a href="${link}"><img src="${img}" class="result-img" alt="${topType}" oncontextmenu="return false"></a>
-    <div><a href="${link}" class="profile-link">Click here to reveal your full sexual profile</a></div>
-  `;
-
-  const compatibility = {
-    "Tender Protector": ["devoted_darling", "mood_multiplier", "promiscuous_plaything"],
-    "Devoted Darling": ["tender_protector", "heatwave", "promiscuous_plaything"],
-    "Heatwave": ["mood_multiplier", "devoted_darling", "generous_giver"],
-    "Mood Multiplier": ["heatwave", "tender_protector", "bedroom_adventurer"],
-    "Generous Giver": ["bedroom_adventurer", "charmer_in_charge", "provoker"],
-    "Promiscuous Plaything": ["charmer_in_charge", "bedroom_adventurer", "dungeon_master"],
-    "Bedroom Adventurer": ["generous_giver", "promiscuous_plaything", "punish_me"],
-    "Charmer in Charge": ["promiscuous_plaything", "generous_giver", "claimed_and_trained"],
-    "Claimed & Trained": ["dungeon_master", "provoker", "charmer_in_charge"],
-    "Punish Me": ["provoker", "claimed_and_trained", "bedroom_adventurer"],
-    "The Provoker": ["punish_me", "claimed_and_trained", "generous_giver"],
-    "Dungeon Master": ["claimed_and_trained", "punish_me", "promiscuous_plaything"]
-  };
-
-  const comp = compatibility[topType];
-  document.getElementById("compatibilitySection").innerHTML = `
-    <strong>Top 3 Compatibility Matches:</strong>
-    <a href="/premium/erotic-blueprint_${comp[0]}.html">${comp[0].replace(/_/g, ' ')}</a>
-    <a href="/premium/erotic-blueprint_${comp[1]}.html">${comp[1].replace(/_/g, ' ')}</a>
-    <a href="/premium/erotic-blueprint_${comp[2]}.html">${comp[2].replace(/_/g, ' ')}</a>
-  `;
-
-  function copyShareURL() {
-    const shareLink = window.location.href;
-    navigator.clipboard.writeText(shareLink).then(() => alert("Copied! Share it with someone sexy."));
-  }
-</script>
 </body>
 </html>
