--- a/Result-new.html
+++ b/Result-new.html
@@ -102,6 +102,25 @@
       font-weight: bold;
     }
 
+    .no-underline {
+      text-decoration: none !important;
+    }
+
+    .profile-caption {
+      margin-top: 15px;
+      font-size: 1.1rem;
+    }
+
+    .score-debug {
+      background-color: rgba(0,0,0,0.3);
+      padding: 10px;
+      margin: 20px auto;
+      max-width: 600px;
+      border-radius: 8px;
+      font-size: 0.9rem;
+      text-align: left;
+    }
+
     @media (min-width: 1024px) {
       body {
         padding: 80px 40px;
@@ -155,152 +174,13 @@
   <div id="imageContainer"></div>
   <div class="section" id="sloganText"></div>
 
+  <!-- Score Debug (remove in production) -->
+  <div class="score-debug" id="scoreDebug"></div>
+
   <!-- Compatibility Matches -->
   <div class="section" id="compatibilityMatches"></div>
 
-  <!-- Extra Link -->
-  <div class="section" style="margin-top: 30px;">
-    <a href="/archetype-gallery.html">See All Sexual Profiles</a>
-  </div>
-<script>
-  function escapeHTML(str) {
-    return String(str || "").replace(/[&<>"']/g, (c) => ({
-      '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;'
-    }[c]));
-  }
-
-  const params = new URLSearchParams(window.location.search);
-  const answers = {};
-  for (let i = 1; i <= 10; i++) {
-    answers[`q${i}`] = params.get(`q${i}`);
-  }
-  const gender = params.get("q8"); // 🍆 = male, 🐱 = female
-
-  // SCORING DATA STRUCTURE
-  const scoreMap = {
-    "Devoted Darling": 0,
-    "Mood Multiplier": 0,
-    "Tender Protector": 0,
-    "Heatwave": 0,
-    "Promiscuous Plaything": 0,
-    "Generous Giver": 0,
-    "Bedroom Adventurer": 0,
-    "Charmer in Charge": 0,
-    "Claimed & Trained": 0,
-    "The Punish Me": 0,
-    "The Provoker": 0,
-    "Dungeon Master": 0
-  };
-
-  const questionWeights = {
-    q1: {
-      a: { "Devoted Darling": 3, "Generous Giver": 2, "Tender Protector": 2, "Mood Multiplier": 1 },
-      b: { "Dungeon Master": 3, "Charmer in Charge": 2, "Bedroom Adventurer": 1 },
-      c: { "The Punish Me": 3, "The Provoker": 2, "Claimed & Trained": 1 },
-      d: { "Promiscuous Plaything": 3, "Mood Multiplier": 2, "Heatwave": 1 }
-    },
-    q2: {
-      a: { "Devoted Darling": 3, "Promiscuous Plaything": 2, "Tender Protector": 1 },
-      b: { "The Punish Me": 3, "The Provoker": 2, "Dungeon Master": 1 },
-      c: { "Bedroom Adventurer": 3, "The Provoker": 2, "Tender Protector": 1 },
-      d: { "Heatwave": 3, "The Provoker": 2, "Generous Giver": 1 },
-      e: { "Promiscuous Plaything": 3, "Generous Giver": 2, "Mood Multiplier": 1 },
-      f: { "Charmer in Charge": 3, "Bedroom Adventurer": 2, "Dungeon Master": 1 },
-      g: { "Promiscuous Plaything": 3, "Generous Giver": 2, "The Punish Me": 1 }
-    },
-    q3: {
-      a: { "Devoted Darling": 5, "Mood Multiplier": 5, "Tender Protector": 5, "Generous Giver": 5, "Heatwave": 5 },
-      b: { "Promiscuous Plaything": 5, "Bedroom Adventurer": 5, "Charmer in Charge": 5, "Mood Multiplier": 5, "Generous Giver": 5 },
-      c: { "Dungeon Master": 5, "Claimed & Trained": 5, "The Punish Me": 5, "The Provoker": 5 }
-    },
-    q4: {
-      a: { "Devoted Darling": 3, "Mood Multiplier": 2, "Generous Giver": 1, "Tender Protector": 1 },
-      b: { "The Punish Me": 3, "Bedroom Adventurer": 2, "Charmer in Charge": 1, "Heatwave": 1 },
-      c: { "Dungeon Master": 3, "The Provoker": 2, "Charmer in Charge": 1 },
-      d: { "Dungeon Master": 3, "Charmer in Charge": 2, "Tender Protector": 1 },
-      e: { "Mood Multiplier": 2, "Claimed & Trained": 2, "The Provoker": 2, "Heatwave": 2, "Generous Giver": 1, "Promiscuous Plaything": 1 }
-    },
-    q5: {
-      a: { "Promiscuous Plaything": 3, "The Punish Me": 1 },
-      b: { "Bedroom Adventurer": 3, "Generous Giver": 2 },
-      c: { "Devoted Darling": 3, "Tender Protector": 3, "Mood Multiplier": 3, "Heatwave": 3 },
-      d: { "Dungeon Master": 3, "Charmer in Charge": 2, "The Provoker": 1, "Bedroom Adventurer": 1 }
-    },
-    q6: {
-      a: { "Mood Multiplier": 3, "Bedroom Adventurer": 2, "Promiscuous Plaything": 1 },
-      b: { "The Provoker": 3, "The Punish Me": 2, "Dungeon Master": 2, "Charmer in Charge": 1 },
-      c: { "Devoted Darling": 3, "Tender Protector": 2, "Generous Giver": 1, "Mood Multiplier": 1 },
-      d: { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Bedroom Adventurer": 2, "Claimed & Trained": 1, "Dungeon Master": 1 }
-    },
-    q7: {
-      a: { "Devoted Darling": 3, "Tender Protector": 2, "Dungeon Master": 1 },
-      b: { "Mood Multiplier": 3, "Generous Giver": 2, "Heatwave": 1 },
-      c: { "Bedroom Adventurer": 3, "Promiscuous Plaything": 2, "Charmer in Charge": 1 },
-      d: { "The Provoker": 3, "The Punish Me": 2, "Bedroom Adventurer": 1 }
-    },
-    q8: {}, // Used separately below
-    q9: {
-      a: { "Dungeon Master": 5, "Charmer in Charge": 5, "Tender Protector": 5 },
-      b: { "Claimed & Trained": 5, "Devoted Darling": 5, "Promiscuous Plaything": 5 },
-      c: { "The Provoker": 5, "Bedroom Adventurer": 5, "Generous Giver": 5 },
-      d: { "Mood Multiplier": 5, "Generous Giver": 5, "The Punish Me": 5 }
-    },
-    q10: {
-      a: { "Devoted Darling": 3, "Mood Multiplier": 3, "Tender Protector": 3, "Generous Giver": 3, "Heatwave": 3 },
-      b: { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Tender Protector": 2, "Heatwave": 2, "Generous Giver": 1 },
-      c: { "Claimed & Trained": 3, "Promiscuous Plaything": 3, "The Punish Me": 2 },
-      d: { "Dungeon Master": 3, "Claimed & Trained": 3, "The Punish Me": 3, "The Provoker": 3 },
-      e: { "Devoted Darling": 4, "Mood Multiplier": 4, "Tender Protector": 4, "Generous Giver": 4, "Heatwave": 4 }
-    }
-  };
-
-  // TALLY THE SCORE
-  Object.entries(answers).forEach(([question, answer]) => {
-    const weights = questionWeights[question]?.[answer];
-    if (weights) {
-      Object.entries(weights).forEach(([type, value]) => {
-        scoreMap[type] += value;
-      });
-    }
-  });
-
-  // PICK TOP ARCHETYPE
-  const sorted = Object.entries(scoreMap).sort((a, b) => b[1] - a[1]);
-  const [winningType] = sorted[0];
-
-  // GENDERED IMAGE
-  const genderSuffix = gender === "eggplant" ? "male" : "female";
-  const safeName = winningType.toLowerCase().replace(/[\s&]+/g, "_").replace(/_+/g, "_");
-  const imagePath = `images/${safeName}_${genderSuffix}.jpg`;
-  const profilePath = `/premium/erotic-blueprint_${safeName}.html`;
-
-  // BACKGROUND
-  const resultBody = document.getElementById("resultBody");
-  const blueRoom = ["Devoted Darling", "Mood Multiplier", "Tender Protector", "Heatwave"];
-  const greenRoom = ["Promiscuous Plaything", "Generous Giver", "Bedroom Adventurer", "Charmer in Charge"];
-  const redRoom = ["Claimed & Trained", "The Punish Me", "The Provoker", "Dungeon Master"];
-  if (blueRoom.includes(winningType)) resultBody.classList.add("blue");
-  else if (greenRoom.includes(winningType)) resultBody.classList.add("green");
-  else if (redRoom.includes(winningType)) resultBody.classList.add("red");
-
-  // DISPLAY RESULT
-  document.getElementById("archetypeText").innerHTML = `
-    <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
-      Your Sexual Profile:
-    </div>
-    <div class="archetype-name" style="color: #e1bf78;">
-      <a href="${escapeHTML(profilePath)}" class="no-underline" style="color: #e1bf78;">${escapeHTML(winningType)}</a>
-    </div>
-    <a href="${escapeHTML(profilePath)}">
-      <img src="${escapeHTML(imagePath)}" alt="${escapeHTML(winningType)}" class="no-save" oncontextmenu="return false">
-    </a>
-    <div class="profile-caption" style="text-shadow: none;">
-      <a href="${escapeHTML(profilePath)}" class="no-underline" style="color: #e1bf78; font-weight: bold; text-decoration: underline;">
-        Click here to reveal your full sexual profile
-      </a>
-    </div>
-  `;
-</script>
+  <!-- Extra Links -->
   <div style="margin-top: 30px;">
     <a href="/archetype-gallery.html">
       <button style="
@@ -335,18 +215,178 @@
     </button>
   </div>
 
-  <script>
-    function shareResult() {
-      const url = window.location.href;
-      const dummy = document.createElement('input');
-      document.body.appendChild(dummy);
-      dummy.value = url;
-      dummy.select();
-      document.execCommand('copy');
-      document.body.removeChild(dummy);
-      alert("Link copied to clipboard! Share your result.");
+<script>
+  function escapeHTML(str) {
+    return String(str || "").replace(/[&<>"']/g, (c) => ({
+      '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;'
+    }[c]));
+  }
+
+  // Get URL parameters
+  const params = new URLSearchParams(window.location.search);
+  const answers = {};
+  for (let i = 1; i <= 10; i++) {
+    answers[`q${i}`] = params.get(`q${i}`);
+  }
+
+  // CORRECTED SCORING DATA STRUCTURE - matching your quiz exactly
+  const scoreMap = {
+    "Devoted Darling": 0,
+    "Mood Multiplier": 0,
+    "Tender Protector": 0,
+    "Heatwave": 0,
+    "Promiscuous Plaything": 0,
+    "Generous Giver": 0,
+    "Bedroom Adventurer": 0,
+    "Charmer in Charge": 0,
+    "Claimed & Trained": 0,
+    "Punish Me": 0,
+    "Provoker": 0,
+    "Dungeon Master": 0
+  };
+
+  // CORRECTED QUESTION WEIGHTS - exactly matching your quiz logic
+  const questionWeights = {
+    q1: {
+      a: { "Devoted Darling": 3, "Generous Giver": 2, "Tender Protector": 2, "Mood Multiplier": 1 },
+      b: { "Dungeon Master": 3, "Charmer in Charge": 2, "Bedroom Adventurer": 1 },
+      c: { "Punish Me": 3, "Provoker": 2, "Claimed & Trained": 1 },
+      d: { "Promiscuous Plaything": 3, "Mood Multiplier": 2, "Heatwave": 1 }
+    },
+    q2: {
+      a: { "Devoted Darling": 3, "Promiscuous Plaything": 2, "Tender Protector": 1 },
+      b: { "Punish Me": 3, "Provoker": 2, "Dungeon Master": 1 },
+      c: { "Bedroom Adventurer": 3, "Provoker": 2, "Tender Protector": 1 },
+      d: { "Heatwave": 3, "Provoker": 2, "Generous Giver": 1 },
+      e: { "Promiscuous Plaything": 3, "Generous Giver": 2, "Mood Multiplier": 1 },
+      f: { "Charmer in Charge": 3, "Bedroom Adventurer": 2, "Dungeon Master": 1 },
+      g: { "Promiscuous Plaything": 3, "Generous Giver": 2, "Punish Me": 1 }
+    },
+    q3: {
+      a: { "Devoted Darling": 5, "Mood Multiplier": 5, "Tender Protector": 5, "Generous Giver": 5, "Heatwave": 5 },
+      b: { "Promiscuous Plaything": 5, "Bedroom Adventurer": 5, "Charmer in Charge": 5, "Mood Multiplier": 5, "Generous Giver": 5 },
+      c: { "Dungeon Master": 5, "Claimed & Trained": 5, "Punish Me": 5, "Provoker": 5 }
+    },
+    q4: {
+      a: { "Devoted Darling": 3, "Mood Multiplier": 2, "Generous Giver": 1, "Tender Protector": 1 },
+      b: { "Punish Me": 3, "Bedroom Adventurer": 2, "Charmer in Charge": 1, "Heatwave": 1 },
+      c: { "Dungeon Master": 3, "Provoker": 2, "Charmer in Charge": 1 },
+      d: { "Dungeon Master": 3, "Charmer in Charge": 2, "Tender Protector": 1 },
+      e: { "Mood Multiplier": 2, "Claimed & Trained": 2, "Provoker": 2, "Heatwave": 2, "Generous Giver": 1, "Promiscuous Plaything": 1 }
+    },
+    q5: {
+      a: { "Promiscuous Plaything": 3, "Punish Me": 1 },
+      b: { "Bedroom Adventurer": 3, "Generous Giver": 2 },
+      c: { "Devoted Darling": 3, "Tender Protector": 3, "Mood Multiplier": 3, "Heatwave": 3 },
+      d: { "Dungeon Master": 3, "Charmer in Charge": 2, "Provoker": 1, "Bedroom Adventurer": 1 }
+    },
+    q6: {
+      a: { "Mood Multiplier": 3, "Bedroom Adventurer": 2, "Promiscuous Plaything": 1 },
+      b: { "Provoker": 3, "Punish Me": 2, "Dungeon Master": 2, "Charmer in Charge": 1 },
+      c: { "Devoted Darling": 3, "Tender Protector": 2, "Generous Giver": 1, "Mood Multiplier": 1 },
+      d: { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Bedroom Adventurer": 2, "Claimed & Trained": 1, "Dungeon Master": 1 }
+    },
+    q7: {
+      a: { "Devoted Darling": 3, "Tender Protector": 2, "Dungeon Master": 1 },
+      b: { "Mood Multiplier": 3, "Generous Giver": 2, "Heatwave": 1 },
+      c: { "Bedroom Adventurer": 3, "Promiscuous Plaything": 2, "Charmer in Charge": 1 },
+      d: { "Provoker": 3, "Punish Me": 2, "Bedroom Adventurer": 1 }
+    },
+    q8: {}, // Gender question - handled separately
+    q9: {
+      a: { "Dungeon Master": 5, "Charmer in Charge": 5, "Tender Protector": 5 },
+      b: { "Claimed & Trained": 5, "Devoted Darling": 5, "Promiscuous Plaything": 5 },
+      c: { "Provoker": 5, "Bedroom Adventurer": 5, "Generous Giver": 5 },
+      d: { "Mood Multiplier": 5, "Generous Giver": 5, "Punish Me": 5 }
+    },
+    q10: {
+      a: { "Devoted Darling": 3, "Mood Multiplier": 3, "Tender Protector": 3, "Generous Giver": 3, "Heatwave": 3 },
+      b: { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Tender Protector": 2, "Heatwave": 2, "Generous Giver": 1 },
+      c: { "Claimed & Trained": 3, "Promiscuous Plaything": 3, "Punish Me": 2 },
+      d: { "Dungeon Master": 3, "Claimed & Trained": 3, "Punish Me": 3, "Provoker": 3 },
+      e: { "Devoted Darling": 4, "Mood Multiplier": 4, "Tender Protector": 4, "Generous Giver": 4, "Heatwave": 4 }
     }
-  </script>
+  };
+
+  // TALLY THE SCORE
+  Object.entries(answers).forEach(([question, answer]) => {
+    if (question === 'q8') return; // Skip gender question for scoring
+    
+    const weights = questionWeights[question]?.[answer];
+    if (weights) {
+      Object.entries(weights).forEach(([type, value]) => {
+        if (scoreMap.hasOwnProperty(type)) {
+          scoreMap[type] += value;
+        }
+      });
+    }
+  });
+
+  // PICK TOP ARCHETYPE
+  const sorted = Object.entries(scoreMap).sort((a, b) => b[1] - a[1]);
+  const [winningType, winningScore] = sorted[0];
+
+  // GENDER HANDLING - q8: a = 🍆 (male), b = 🐱 (female)
+  const gender = answers.q8;
+  const genderSuffix = gender === "a" ? "male" : "female";
+  
+  // CREATE SAFE FILENAME
+  const safeName = winningType.toLowerCase().replace(/[\s&]+/g, "_").replace(/_+/g, "_");
+  const imagePath = `images/${safeName}_${genderSuffix}.jpg`;
+  const profilePath = `/premium/erotic-blueprint_${safeName}.html`;
+
+  // SET BACKGROUND COLOR BASED ON ROOM
+  const resultBody = document.getElementById("resultBody");
+  const blueRoom = ["Devoted Darling", "Mood Multiplier", "Tender Protector", "Heatwave"];
+  const greenRoom = ["Promiscuous Plaything", "Generous Giver", "Bedroom Adventurer", "Charmer in Charge"];
+  const redRoom = ["Claimed & Trained", "Punish Me", "Provoker", "Dungeon Master"];
+  
+  if (blueRoom.includes(winningType)) {
+    resultBody.classList.add("blue");
+  } else if (greenRoom.includes(winningType)) {
+    resultBody.classList.add("green");
+  } else if (redRoom.includes(winningType)) {
+    resultBody.classList.add("red");
+  }
+
+  // DISPLAY RESULT
+  document.getElementById("archetypeText").innerHTML = `
+    <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
+      Your Sexual Profile:
+    </div>
+    <div class="archetype-name" style="color: #e1bf78;">
+      <a href="${escapeHTML(profilePath)}" class="no-underline" style="color: #e1bf78;">${escapeHTML(winningType)}</a>
+    </div>
+    <a href="${escapeHTML(profilePath)}">
+      <img src="${escapeHTML(imagePath)}" alt="${escapeHTML(winningType)}" class="archetype-image" oncontextmenu="return false">
+    </a>
+    <div class="profile-caption" style="text-shadow: none;">
+      <a href="${escapeHTML(profilePath)}" class="no-underline" style="color: #e1bf78; font-weight: bold; text-decoration: underline;">
+        Click here to reveal your full sexual profile
+      </a>
+    </div>
+  `;
+
+  // DEBUG SCORES (remove this in production)
+  document.getElementById("scoreDebug").innerHTML = `
+    <strong>Score Debug:</strong><br>
+    Winning: ${winningType} (${winningScore} points)<br>
+    Gender: ${gender} (${genderSuffix})<br>
+    Answers: ${JSON.stringify(answers)}<br>
+    Top 3: ${sorted.slice(0, 3).map(([name, score]) => `${name}: ${score}`).join(', ')}
+  `;
+
+  function shareResult() {
+    const url = window.location.href;
+    const dummy = document.createElement('input');
+    document.body.appendChild(dummy);
+    dummy.value = url;
+    dummy.select();
+    document.execCommand('copy');
+    document.body.removeChild(dummy);
+    alert("Link copied to clipboard! Share your result.");
+  }
+</script>
 
   <footer style="text-align: center; margin-top: 60px;">
     <p style="font-size: 0.8rem; color: white; opacity: 0.7;">
