--- a/Result-new.html
+++ b/Result-new.html
@@ -283,17 +283,17 @@
       "7d": { "Provoker": 3, "Punish Me": 2, "Bedroom Adventurer": 1 }
     },
     q9: {
-      "9a": { "Dungeon Master": 5, "Charmer in Charge": 5, "Tender Protector": 5 },
-      "9b": { "Claimed & Trained": 5, "Devoted Darling": 5, "Promiscuous Plaything": 5 },
-      "9c": { "Provoker": 5, "Bedroom Adventurer": 5, "Generous Giver": 5 },
-      "9d": { "Mood Multiplier": 5, "Generous Giver": 5, "Punish Me": 5 }
+      "9a": { "Dungeon Master": 6, "Charmer in Charge": 6, "Tender Protector": 6 },
+      "9b": { "Claimed & Trained": 6, "Devoted Darling": 6, "Promiscuous Plaything": 6 },
+      "9c": { "Provoker": 6, "Bedroom Adventurer": 6, "Generous Giver": 6 },
+      "9d": { "Mood Multiplier": 6, "Generous Giver": 6, "Punish Me": 6 }
     },
     q10: {
       "10a": { "Devoted Darling": 3, "Mood Multiplier": 3, "Tender Protector": 3, "Generous Giver": 3, "Heatwave": 3 },
       "10b": { "Charmer in Charge": 3, "Promiscuous Plaything": 2, "Tender Protector": 2, "Heatwave": 2, "Generous Giver": 1 },
       "10c": { "Claimed & Trained": 3, "Promiscuous Plaything": 3, "Punish Me": 2 },
       "10d": { "Dungeon Master": 3, "Claimed & Trained": 3, "Punish Me": 3, "Provoker": 3 },
-      "10e": { "Devoted Darling": 4, "Mood Multiplier": 4, "Tender Protector": 4, "Generous Giver": 4, "Heatwave": 4 }
+      "10e": { "Devoted Darling": 3, "Mood Multiplier": 3, "Tender Protector": 3, "Heatwave": 3 }
     }
   };
     // Calculate total score
